# airflow

./: .gitignore  .pre-commit-config.yaml  BREEZE.rst  CONTRIBUTING.rst  CRITICAL_REVIEW_FIXES.md  Dockerfile  Dockerfile.ci  ENVELOPE_PROTOCOL_CHANGES.md  IMPLEMENTATION_SUMMARY.md  INSTALL  README.md  RELEASE_NOTES.rst  option3-implementation-plan.md  pyproject.toml  reproducible_build.yaml  setup.cfg  setup.py  task-sdk-serialization-plan.md
.circleci/: config.yml
.github/: CODEOWNERS  boring-cyborg.yml
airflow/: configuration.py  exceptions.py  providers_manager.py  settings.py
airflow-common/: pyproject.toml
airflow-core/: .pre-commit-config.yaml  pyproject.toml
airflow-re-test/: Dockerfile.control-plane  Dockerfile.pokemon-worker  Dockerfile.pokemon-worker-v1  Dockerfile.pokemon-worker-v2  docker-compose.yaml  entrypoint-service.sh
chart/: Chart.yaml  values.schema.json  values.yaml
contributing-docs/: 08_static_code_checks.rst  14_metadata_database_updates.rst  18_contribution_workflow.rst  20_rust_sdk_plan.rst  24_proposing_best_practices_and_air_rules.rst  26_migration_round_trip_check.rst  README.rst
dev/: analyze_trace.py  memory-optimization-analysis.md  otel_tracing_demo_outline.txt  pr_62554_review.md  serialization_refactor_design.md
devel-common/: pyproject.toml
docs/: .gitignore  README.md  spelling_wordlist.txt
go-sdk/: go.mod
java-sdk/: gradle.properties
java-task-sdk/: InputContext.java  Main.java  Makefile  TaskRegistry.java  TaskRunner.java  Variables.java  XcomData.java  log4j2.xml
kubernetes_tests/: test_kubernetes_pod_operator.py
newsfragments/: 41096.significant.rst  41348.significant.rst  43096.significant.rst  43349.significant.rst  43530.significant.rst  43533.significant.rst  43902.significant.rst  aip-72.significant.rst
providers/pokemon/: README.md  pyproject.toml
providers/pokemon/src/pokemon/: __init__.py  provider.yaml
providers/pokemon/src/pokemon/providers/: __init__.py
providers/pokemon/src/pokemon/providers/pokeapi/: get_provider_info.py
providers/pokemon/src/pokemon/providers/pokeapi/hooks/: __init__.py  pokemon_hook.py
providers/pokemon/src/pokemon/providers/pokeapi/operators/: pokemon_operator.py
(+1339 files in other folders)
