# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pokemon-airflow-provider"
version = "1.0.0"
description = "Custom Pokémon Airflow provider - Gotta orchestrate 'em all! 🎮⚡"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name="Pokémon Provider Team", email="dev@pokeprovider.io"},
]
keywords = ["airflow-provider", "pokemon", "pokeapi", "custom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"

dependencies = [
    "apache-airflow>=2.11.0",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/pokeprovider/pokemon-airflow-provider"
"Bug Tracker" = "https://github.com/pokeprovider/pokemon-airflow-provider/issues"
"PokéAPI" = "https://pokeapi.co"

[project.entry-points."apache_airflow_provider"]
provider_info = "pokemon.providers.pokeapi.get_provider_info:get_provider_info"

[tool.flit.module]
name = "pokemon"
